...
                    selected = selectedTab == 1,
                    onClick = { selectedTab = 1 }
                )

                // 3. Carrito
                NavigationBarItem(
                    icon = { Icon(Icons.Default.ShoppingCart, "Carrito") },
                    label = { Text("Carrito") },
                    selected = selectedTab == 2,
                    onClick = { selectedTab = 2 }
                )

                // 4. QR
...
                    selected = selectedTab == 3,
                    onClick = { selectedTab = 3 }
                )

                // 5. Perfil
                NavigationBarItem(
                    icon = { Icon(Icons.Default.Person, "Perfil") },
                    label = { Text("Perfil") },
                    selected = selectedTab == 4,
                    onClick = { selectedTab = 4 }
                )

                // 6. Admin
...
