...
            .fillMaxSize()
            .padding(16.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        if (!hasPermission) {
            Text("Se requiere acceso a la cámara", fontSize = 20.sp, fontWeight = FontWeight.Bold)
            Spacer(Modifier.height(16.dp))
            Button(onClick = { permissionLauncher.launch(android.Manifest.permission.CAMERA) }) {
                Text("Dar Permiso")
            }
        } else if (qrResult == null) {
            Text(
                "Escanea un código QR",
                fontSize = 24.sp,
                fontWeight = FontWeight.Bold,
                color = Color(0xFF1E90FF),
                modifier = Modifier.padding(bottom = 16.dp)
            )

...
